--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
     <body>
         <div class="wrap">
             <div class="profile"></div>
-            <h1 class="main">Alice</h1>
-            <p class="sub" >코딩 쌩짜~~ 초보</p>
+            <h1 class="main">Wonder Land Alice</h1>
+            <p class="sub" >코딩 쌩짜~~ 초보, 처음 입문하여 배워봅니다!!</p>
+            <a target="_blank" href="https://spartacodingclub.kr//">Spartcodingclub</a>
             <a target="_blank" href="https://www.uhakone.com//">미국유학원</a>
             <a target="_blank" href="https://blog.naver.com/iliahi/">미국명문대 입학보장</a>
             <a target="_blank" href="https://blog.naver.com/ysk9254/">해외유학</a>
